k8s/templates/api.yaml
apiVersion: v1
kind: Pod
metadata:
  name: milal-api
  labels:
    app: milal-api
spec:
  containers:
    - name: milal-api
      image: tlsskfk/milal-api:v1.1.2
