k8s/templates/client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: milal-client
  labels:
    app: milal-client
spec:
  containers:
    - name: react-app
      image: tlsskfk/milal-client:v1.1.145
