k8s/templates/client-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-svc
spec:
  type: NodePort
  selector:
    app: milal-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31000
