k8s/templates/mysql-dev-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-dev-svc
spec:
  type: NodePort
  selector:
    app: milal-mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
      nodePort: 31002
