k8s/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: milal-ingress
spec:
  tls:
    - secretName: my-app-tls-secret
      tlsVersions:
        - TLSv1.3
  rules:
    - host: steveboy.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-svc
                port:
                  number: 80
